--- a/app/pages/classify/classify.clAll/classify.clAll.html
+++ b/app/pages/classify/classify.clAll/classify.clAll.html
@@ -1,5 +1,5 @@
 <div class="classify-all">
-	<header class="classify-title">
+	<header class="classify-title common-title">
 		<div class="go-back-home">
 			<a href="#home">
 				<img src="http://mobile.uzise.com/assets/mob/images/left.png"/>
