add others mine flies

--- a/app/pages/mine/mine.html
+++ b/app/pages/mine/mine.html
@@ -8,7 +8,7 @@
 						
 		</header>
 		<div id="myList">
-			<a href="">
+			<a href="../my_list/new_file.html ">
 				<div><img src="http://mobile.uzise.com/assets/mob/images/member/12.png" /></div>
 				<div><p>我的订单</p></div>
 				<div><p>查看全部订单   > </p></div>
@@ -48,7 +48,7 @@
 			
 			</div>
 		<div id="mine_server">
-			<a href="#" class="about">
+			<a href="../my_coupon/coupon.html" class="about">
 				<div><img src="http://mobile.uzise.com/assets/mob/images/member/5.png"/></div>
 				<div><p>我的优惠券</p></div>
 				<div> > </div>
@@ -58,12 +58,12 @@
 				<div><p>我的礼品</p></div>
 				<div> > </div>
 			</a>
-			<a href="#" class="about">
+			<a href="../flower/flower.html" class="about">
 				<div><img src="http://mobile.uzise.com/assets/mob/images/member/7.png"/></div>
 				<div><p>我的柚花</p></div>
 				<div> > </div>
 			</a>
-			<a href="#" class="about">
+			<a href="../balance_money/balance.html" class="about">
 				<div><img src="http://mobile.uzise.com/assets/mob/images/member/8.png"/></div>
 				<div><p>我的余额</p></div>
 				<div> > </div>
@@ -73,7 +73,7 @@
 				<div><p>收货地址</p></div>
 				<div> > </div>
 			</a>
-			<a href="#" class="about">
+			<a href="../opinion/opinion.html" class="about">
 				<div><img src="http://mobile.uzise.com/assets/mob/images/member/10.png"/></div>
 				<div><p>反馈意见</p></div>
 				<div> > </div>
