--- a/app/pages/music/music.html
+++ b/app/pages/music/music.html
@@ -87,4 +87,10 @@
 			</div>
 		</div>
 	</div>
+	<div class="go-home">
+		<a href="#home">
+			<img src="http://ogubink6a.bkt.clouddn.com/29deafd34f126d3bdb81bf4c5c7b8b5a.png"/>
+		</a>
+	</div>
+	
 </div>
