chenage and add

--- a/app/pages/home/home_new/new.html
+++ b/app/pages/home/home_new/new.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -7,12 +7,12 @@
 		<link rel="stylesheet" href="../../common/css/swiper-3.3.1.min.css" />
 		<script src="../../common/js/swiper-3.3.1.min.js"></script>
 	</head>
-	<body>
+	<body>-->
 		<header id="good_head">
-			<a href="">
+			<a ui-sref="home">
 				<img src="http://mobile.uzise.com/assets/mob/images/left.png">
 			</a>
-			<span>详情评论</span>
+			<span>详情评论</span>s
 			<a href="">登录</a>
 		</header>
 		 <div class="swiper-container">
@@ -76,7 +76,7 @@
 					<a href=""><img src="http://mobile.uzise.com/assets/mob/images/product/cart.png" />购物车</a>
 				
 			</aside>
-		<script src="new.js"></script>
+		<!--<script src="new.js"></script>
 			    <script type="text/javascript">
 				document.documentElement.style.fontSize = innerWidth/10+"px";
 				window.onresize = function(){
@@ -86,4 +86,4 @@
 
 	</script>
 	</body>
-</html>
+</html>-->
