--- a/app/pages/home/home_story/story.html
+++ b/app/pages/home/home_story/story.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" href="story.css"/>
 	</head>
-	<body>
+	<body>-->
 		<nav>
 			<a href="">首页</a>
 			<a href="">品牌历程</a>
@@ -16,32 +16,31 @@
 			<img src="http://mobile.uzise.com/topic/mobile/brandStory/images/1.jpg" />
 		</div>
 		<footer id="his_foot">
-		<a href="">
+		<a ui-sref="home">
 			<p>
 				<img src="http://mobile.uzise.com/assets/mob/images/nav/home.png">
 			</p>首页
 		</a>
-		<a href="">
+		<a ui-sref="classify">
 			<p>
 				<img src="http://mobile.uzise.com/assets/mob/images/nav/cascades.png">
 			</p>产品分类
 		</a>
-			<div>
+			<a ui-sref="music">
 				<img src="http://mobile.uzise.com/assets/mob/images/index/UZISE_Normal.png" />
-			</div>
-		<a href="">
+			</a>
+		<a ui-sref="cart">
 			<p>
 			<img src="http://mobile.uzise.com/assets/mob/images/nav/cart.png">
 			</p>购物车
 		</a>
-		<a href="">
+		<a ui-sref="mine">
 			<p>
 				<img src="http://mobile.uzise.com/assets/mob/images/nav/my.png">
 			</p>个人中心
 		</a>
-			
 		</footer>
-		<script type="text/javascript">
+		<!--<script type="text/javascript">
 				document.documentElement.style.fontSize = innerWidth/10+"px";
 				window.onresize = function(){
 				document.documentElement.style.fontSize = innerWidth/10+"px";
@@ -50,4 +49,4 @@
 
 	</script>
 	</body>
-</html>
+</html>-->
