--- a/app/pages/music/music.html
+++ b/app/pages/music/music.html
@@ -1,6 +1,6 @@
-<div class="music">
-	<div class="music-anim">
-		<section class="anima-1">
+<div class="music"  ng-controller='sd'>
+	<div class="music-anim" ng-click='muRun()'>
+		<section class="anima-1 mu-move">
 			<img src="http://res1.eqh5.com/group3/M00/8A/B3/yq0KZFaeDtiAUiJzAACHxUeqc2A060.png?imageMogr2/thumbnail/1069x1069%3E/strip"/>
 		</section>
 		<section class="anima-2">
