--- a/app/pages/cart/cart.html
+++ b/app/pages/cart/cart.html
@@ -1,7 +1,7 @@
 <div class="cart">
 	<header class="cart-title common-title">
-		<div class="go-back-home">
-			<a href="#home">
+		<div class="go-back-home" ng-controller='cart-back'>
+			<a href="#home" ng-click='back_home()'>
 				<img src="http://mobile.uzise.com/assets/mob/images/left.png"/>
 			</a>
 		</div>
