--- a/app/pages/classify/classify.clAll/classify.clAll.html
+++ b/app/pages/classify/classify.clAll/classify.clAll.html
@@ -1,7 +1,8 @@
 <div class="classify-all">
 	<header class="classify-title common-title">
-		<div class="go-back-home">
-			<a href="#home">
+		<!--ng-controller='acAllCtrl'-->
+		<div class="go-back-home" >
+			<a href="#home" ><!--ng-click='backToHomel()'-->
 				<img src="http://mobile.uzise.com/assets/mob/images/left.png"/>
 			</a>
 		</div>
@@ -13,7 +14,8 @@
 		</div>
 	</header>
 	<nav class="all-nav">
-		<a href="#" class="all-nav-list">全部商品</a>
+		<a href="#" class="all-nav-list" ng-repeat='x in names'>{{x.listname}}</a>
+		<!--<a href="#" class="all-nav-list">全部商品</a>
 		<a href="#" class="all-nav-list">护肤</a>
 		<a href="#" class="all-nav-list">爽肤</a>
 		<a href="#" class="all-nav-list">裸妆</a>
@@ -21,7 +23,7 @@
 		<a href="#" class="all-nav-list">面膜</a>
 		<a href="#" class="all-nav-list">全部商品</a>
 		<a href="#" class="all-nav-list">全部商品</a>
-		<a href="#" class="all-nav-list">全部商品</a>
+		<a href="#" class="all-nav-list">全部商品</a>-->
 	</nav>
 	<div class="all-banner">
 		<div class="banner-main">
@@ -34,156 +36,21 @@
 	</div>
 	<div class="all-main">
 		<ul class="all-main-list">
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
+			<li class="all-pd fl" ng-repeat='x in arr'>
+				<a href="#"><img ng-src={{x.url}}/></a>
 				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
+					{{x.name}}
 				</div>
 				<div class="all-pd-price">
 					<span class="price">
-						￥&nbsp;148
+						￥&nbsp;{{x.price}}
 					</span>
 					<span class="market-price">
-						￥&nbsp;185
+						￥&nbsp;{{x.marketPrice}}
 					</span>
 				</div>
 				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
-				</div>
-			</li>
-			<li class="all-pd fl">
-				<a href="#">
-					<img src="http://uimg.uzise.com/product/350x350/7336b59c4f494191dc60b94b2fb9349f.jpg" alt="" />
-				</a>
-				<div class="all-pd-name ellipsis">
-					自然透白多效修护cc霜
-				</div>
-				<div class="all-pd-price">
-					<span class="price">
-						￥&nbsp;148
-					</span>
-					<span class="market-price">
-						￥&nbsp;185
-					</span>
-				</div>
-				<div class="all-experience">
-					3457654人已经体验
+					{{x.visited}}人已经体验
 				</div>
 			</li>
 		</ul>
